Expenses api modified and documentation completed for expenses create endpoint
